[package]
name = "billy-bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "billy_bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
once_cell = "1.19.0"
[dependencies.arrayref]
version = "0.3"

[dev-dependencies]
proptest = "1.0"
