[package]
name = "lmaofun-bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lmaofun_bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
once_cell = "1.19.0"
derive_builder = "0.20.0"
[dev-dependencies]
proptest = "1.0"
